# hocg-fan-sim

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
derive/: Cargo.toml
derive/src/: lib.rs
hocg-fan-library/: Cargo.toml
hocg-fan-library/src/: lib.rs  main.rs  sets.rs
hocg-fan-library/src/sets/: hbp01.rs  hsd01.rs  hy.rs
hocg-fan-library/src/sets/hbp01/: hbp01_009.rs  hbp01_021.rs  hbp01_038.rs  hbp01_041.rs  hbp01_042.rs  hbp01_044.rs  hbp01_048.rs  hbp01_056.rs  hbp01_062.rs  hbp01_068.rs  hbp01_076.rs  hbp01_079.rs  hbp01_080.rs  hbp01_082.rs  hbp01_088.rs  hbp01_096.rs  hbp01_098.rs  hbp01_123.rs  hbp01_126.rs
hocg-fan-library/src/sets/hsd01/: hsd01_001.rs  hsd01_002.rs  hsd01_003.rs  hsd01_004.rs  hsd01_005.rs  hsd01_006.rs  hsd01_007.rs  hsd01_008.rs  hsd01_009.rs  hsd01_010.rs  hsd01_011.rs  hsd01_012.rs  hsd01_013.rs  hsd01_014.rs  hsd01_015.rs  hsd01_016.rs  hsd01_017.rs  hsd01_018.rs  hsd01_019.rs  hsd01_020.rs  hsd01_021.rs
hocg-fan-library/src/sets/hy/: hy01_001.rs  hy02_001.rs  hy03_001.rs  hy04_001.rs
hocg-fan-server/: Cargo.toml
hocg-fan-server/src/: main.rs
hocg-fan-sim/: Cargo.toml
hocg-fan-sim-derive/: Cargo.toml
hocg-fan-sim-derive/src/: lib.rs
hocg-fan-sim/src/: card_effects.rs  cards.rs  client.rs  events.rs  gameplay.rs  lib.rs  library.rs  main.rs  modifiers.rs  prompters.rs  temp.rs  tests.rs
hocg-fan-sim/src/card_effects/: effects.rs  evaluate.rs  parse.rs
hocg-fan-sim/tests/: tests.rs
hocg-fan-sim/tests/sets/: hsd01.rs  mod.rs
hocg-fan-web-client/: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  tailwind.config.js
hocg-fan-web-client/assets/: hocg-fan-web-client.css
hocg-fan-web-client/src/: main.rs
src/: ability.rs  card_effects.rs  cards.rs  client.rs  events.rs  gameplay.rs  lib.rs  main.rs  modifiers.rs  prompters.rs  temp.rs
src/ability/: de.rs  error.rs  ser.rs
src/card_effects/: de.rs  effects.rs  error.rs  evaluate.rs  parse.rs  ser.rs
tests/: tests.rs
tests/sets/: hsd01.rs  mod.rs
