[package]
name = "hololive-ucg-poc"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["derive"]

[dependencies]
hololive-ucg-poc-derive = { version = "*", path = "derive" }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
rand = "0.8.5"
enum_dispatch = "0.3.13"
iter_tools = "0.20.0"
pretty_assertions = "1.0.0"