

[workspace]
resolver = "2"
members = [
    "hocg-fan-sim",
    "hocg-fan-sim-derive",
    "hocg-fan-server",
    "hocg-fan-web-client",
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
hocg-fan-sim = { path = "hocg-fan-sim", version = "*" }
hocg-fan-sim-derive = { path = "hocg-fan-sim-derive", version = "*" }
hocg-fan-server = { path = "hocg-fan-server", version = "*" }
hocg-fan-web-client = { path = "hocg-fan-web-client", version = "*" }

dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
rand = "0.8.5"
enum_dispatch = "0.3.13"
iter_tools = "0.20.0"
pretty_assertions = "1.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "local-time",
] }
tracing-appender = "0.2.3"
time = { version = "0.3.36", features = ["macros"] }
debug-ignore = "1.0.5"
