[package]
name = "hocg-fan-library"
edition = "2021"
version.workspace = true

[dependencies]
hocg-fan-sim = { workspace = true }
bincode = { workspace = true }
flate2 = { workspace = true }
automod = "1.0"

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true }
hocg-fan-sim = { workspace = true, features = ["test"] }
