[package]
name = "hocg-fan-server"
edition = "2021"
version.workspace = true

[dependencies]
hocg-fan-sim = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
async-channel = { workspace = true }
tokio = { workspace = true }
get-size = { workspace = true }
bincode = { workspace = true }
flate2 = { workspace = true }
