[package]
name = "hocg-fan-sim-derive"
edition = "2021"
version.workspace = true


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.34"
proc_macro_roids = "0.8.0"
quote = "1.0.10"
syn = { version = "2.0.74", features = ["extra-traits", "visit"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
