[package]
name = "hocg-fan-sim"
edition = "2021"
version.workspace = true

[dependencies]
hocg-fan-sim-derive = { workspace = true }
dialoguer = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }
enum_dispatch = { workspace = true }
iter_tools = { workspace = true }
pretty_assertions = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
time = { workspace = true }
debug-ignore = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
async-channel = { workspace = true }
get-size = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
