[package]
name = "hocg-fan-sim"
edition = "2021"
version.workspace = true

[features]
test = []

[dependencies]
hocg-fan-sim-derive = { workspace = true }
dialoguer = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }
enum_dispatch = { workspace = true }
iter_tools = { workspace = true }
pretty_assertions = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
time = { workspace = true }
debug-ignore = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
async-channel = { workspace = true }
get-size = { workspace = true }
bincode = { workspace = true }
flate2 = { workspace = true }
async-rwlock = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
