[package]
name = "hocg-fan-web-client"
edition = "2021"
version.workspace = true

[dependencies]
hocg-fan-sim = { workspace = true }
async-channel = { workspace = true }

dioxus = { version = "0.5", features = ["web", "router"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
async-oneshot = "0.5.9"
futures = "0.3.30"

# Debug
dioxus-logger = "0.5.1"
